Side Menu/ Hamburger menu icon - attach a click event handler to the hamburger icon to toggle the Side Menu ISSUE: jquery-custom-animations don't work as expected SOL: create own keyframe to slide side menu in and out of view ISSUE: side menu disappears as soon as animation stops SOL: position side menu absolute, use jquery to force side menu to remain on screen after animation

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -14,9 +14,9 @@ body{
     color: #666;
     background-color: #fff;
     overflow-x: hidden;
-    //for side-menu
-    display: grid;
-    grid-template-columns: calc(100% - 350px) 350px;
+    // //for side-menu
+    // display: grid;
+    // grid-template-columns: 1fr 350px;
     //main page contant takes up as much space as available: 1fr
     // grid-template-columns: 1fr ;
     //
@@ -33,31 +33,41 @@ body{
             width: 1200px;
         }
     }
-    div#container{
+    div#side-menu{
+        position: absolute;
+        top: 0;
+        right: -350px;
+        width: 350px;
         // display: none;
-        // width: auto;
-        height: 100%;
-        position: relative;
-        overflow: hidden;
-        div.main-outer{
-            height: 100%; 
-            div.main-inner{
-                div#cookie-app{} 
-                div#header{} 
-                div#nav{}
-                div#banner{} 
-                div#middle{}
-                div#accreditations{}
-                div#about-netmatters{}
-                div#latest-news{} 
-                div#our-clients{}
-            }   
-            footer{}
-            div#footer-bottom{}    
+        visibility: hidden;
+        &.toggle-side-menu{
+            animation-name: slide;
+            animation-duration: 3s;
         }
     }
-    div#side-menu{
-        // display: none;
-        width: 350px
+    div#main-outer-container{
+        div#container{
+            // display: none;
+            width: 100%;
+            height: 100%;
+            position: relative;
+            overflow: hidden;
+            div.main-outer{
+                height: 100%; 
+                div.main-inner{
+                    div#cookie-app{} 
+                    div#header{} 
+                    div#nav{}
+                    div#banner{} 
+                    div#middle{}
+                    div#accreditations{}
+                    div#about-netmatters{}
+                    div#latest-news{} 
+                    div#our-clients{}
+                }   
+                footer{}
+                div#footer-bottom{}    
+            }
+        }
     }
 }
